--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,5 @@ jobs:
         with:
           target_branch: gh-pages
           build_dir: dist/sps-challenge
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
